--- a/docs/manuscripts/pipeline.tex
+++ b/docs/manuscripts/pipeline.tex
@@ -6,13 +6,11 @@
 \author[1]{Charles T. Gray}
 \author[2]{Hollie Birkinshaw}
 \author[3]{Matthew Grainger}
-\author[4]{Charles A. Robinson}
 \author[2]{Tamar Pincus}
 \author[1]{Gavin Stewart}
 \affil[1]{Newcastle University}
 \affil[2]{Royal Holloway}
 \affil[3]{NINA}
-\affil[4]{CA}
 
 \usepackage{Sweave}
 \begin{document}
@@ -27,7 +25,7 @@
 % transparency _during_ the research process
 
 Proponents of open science commendably underscore reuse and extensibility of 
-scientific research components, such as data and code; techniques that facilitate the incorporation of these components into future analyses~\cite{laine_2018, peng_reproducible_2011-1, wilkinson_2016}. Less explicit attention, however, is given to the benefits of reproducible workflows, where results can be readily calculated by another researcher, and computational transparency \emph{during} the research project, as opposed to beyond publication. Sure, we can appeal to an analyst's commitment to scientific civic duty, but by explicitly examining how reproducible workflows can facilitate collaboration with domain-knowledge experts we begin to answer the arguably more pertinent question, \emph{What's in reproducibility for me}?      
+scientific research components, such as data and code; techniques that facilitate the incorporation of these components into future analyses~\cite{laine_2018, peng_reproducible_2011-1, wilkinson_2016}. Less explicit attention, however, is given to the benefits of reproducible workflows, where results can be readily calculated by another researcher, and computational transparency \emph{during} the research project, as opposed to beyond publication. Of course, we can appeal to an analyst's commitment to scientific civic duty, but by explicitly examining how reproducible workflows can facilitate collaboration with domain-knowledge experts we begin to answer the arguably more pertinent question, \emph{What's in reproducibility for me}?      
 
 \subsection{Benefits of reproducibility and open science}
 
