--- a/neuropathic.Rmd
+++ b/neuropathic.Rmd
@@ -1,11 +1,12 @@
 ---
 title: "Neuropathic pain"
 description: |
-  Comparison and analysis of the treatment of neuropathic pain with antidepressants
+  Comparison and analysis of the treatment of fibromyalgia with antidepressants
 date: "updated: `r Sys.Date()`"
 output: 
   distill::distill_article:
     toc: true
+    code_folding: true
 bibliography: references.bib
 ---
 
@@ -19,6 +20,7 @@ library(gt)
 library(tidyverse)
 library(skimr)
 library(metafor)
+library(targets)
 
 source("R/hpp_themes.R")
 
@@ -29,12 +31,59 @@ source("R/hpp_themes.R")
 
 In this section I replicate the findings of Moore _et al._ [@moore_2015].
 
+## notes
+
+Objective: measure efficacy of analgesic efficacy and adverse events of amitriptyline on pain in fibromyalgia patients.
+
+### Three tiers of evidence
+
+> Probably should incorporate these as variables into our analysis. 
+
+#### First tier
+
+- Study design follows current best standards
+- Minimal risk of bias
+- Outcome equivalent to substantial pain reduction
+- Intention to treat without inputation for dropouts (not sure what this means)
+- $\geqslant$ 200 participants in comparison; i.e., total sample size across arms
+- 8-12 weeks duration
+- parallel design
+
+#### Second tier
+
+- Failed to meet 1 or more items in First tier
+- At risk of bias
+
+#### Third tier
+
+- Small number of participants
+- Likely to be biased
+- Outcomes of limited clinical utility
+
+## Outcomes
+
+Analgesic efficacy: NNT (number needed to treat)
+
+Harm: NNH number heeded to treat to harm
+
+> This is only important for transformation in the summary of findings, that is, after the model's log risk ratios have been calculated. Not important for model. Importantly, to calculate NNT and NNH, we require a something somehting. 
+
+## Model notes
+
+Risk ratio of 50% pain relief using a fixed-effect meta-analysis
+
+## Results
+
+- 9 studies, 2 with cross-over design
+- 649 participants
+- 6-12 weeks duration
+- 25mg and 50mg dosages
+
 ## import data from revman format
 
 ```{r import moore data}
 fib_ami_dat_raw <- read.rm5("data/fibromyalgia-amitriptyline.rm5") %>% 
     janitor::clean_names() 
-
 
 # tidy it up a bit
 fib_ami_dat <-
@@ -44,39 +93,15 @@ fib_ami_dat <-
 
 ```
 
-```{r look at moore data, layout = "l-page"}
-fib_ami_dat %>% 
-  gt(groupname_col = "outcome") %>% 
-  hpp_tab(vertical_divider = "study")
-
-```
-
-And in the entire dataset, we have the columns.
-
-```{r}
-fib_ami_dat %>% 
-  skim()
-```
-
-We'll need these data in long format. 
-
-```{r}
-fib_ami_long <-
-  fib_ami_dat %>% 
-  select(-c(ends_with("_e"))) %>% 
-  rename(event = event_c, n = n_c) %>% 
-  mutate(arm = "c") %>% 
-  bind_rows(
-      fib_ami_dat %>% 
-  select(-c(ends_with("_c"))) %>% 
-  rename(event = event_e, n = n_e) %>% 
-  mutate(arm = "e")
-  )
-
-```
-
-
 ## third-tier efficacy
+
+Our objective is to replicate the results shown in this analysis.
+
+```{r}
+knitr::include_graphics("external-figs/moore-third-tier.png")
+```
+
+
 
 ```{r}
 third_tier_dat <- 
@@ -90,38 +115,87 @@ third_tier_dat %>%
   
 ```
 
+
 ```{r}
-third_tier_rma <-
+third_tier_escalc <-
   third_tier_dat %>%
   # does adding the complement help?
   mutate(comp_c = n_c - event_c, comp_e = n_e - event_e) %>%
   escalc(
     measure = "RR",
-    ai = event_c,
-    bi = comp_c,
-    n1i = n_c,
-    ci = event_e,
-    di = comp_e,
-    n2i = n_e,
+    ai = event_e,
+    bi = comp_e,
+    n1i = n_e,
+    ci = event_c,
+    di = comp_c,
+    n2i = n_c,
     dat = .
-  ) %>%
+  ) 
+  
+third_tier_rma <-   
   rma(
     yi = yi,
     vi = vi,
     slab = study,
-    data = .,
-    method = "FE"
+    data = third_tier_escalc
   )
 
-```
 
-> Gavin, this doesn't match the results in the paper at all. WHYEEEE?!!
 
-```{r}
-forest(third_tier_rma)
+third_tier_mh <- 
+  rma.mh(
+    slab = study,
+        measure = "RR",
+    ai = event_e,
+    bi = comp_e,
+    n1i = n_e,
+    ci = event_c,
+    di = comp_c,
+    n2i = n_c,
+    data = third_tier_dat %>%   
+      mutate(comp_c = n_c - event_c, comp_e = n_e - event_e),
+    add = 1/2
+
+
+  )  
+
+
+forest(third_tier_mh, transf = exp)
 
 ```
 
 # reproduction
+
+> Discuss with Hollie why Carette 1995 is omitted from the review. 
+
+```{r}
+tar_read(w_covidence) %>% 
+  filter(str_detect(study, "care|gins")) %>% 
+  count(study)
+
+
+```
+
+
+
+```{r}
+tar_load(w_obs)
+
+```
+
+```{r}
+neuropathic_dat <- 
+w_obs %>% 
+  filter(condition_general == "fibromyalgia", 
+         str_detect(arm, "placebo|amitrip")) %>%
+  group_by(outcome, study) %>% 
+  mutate(arms_per_study = 1:n()) %>% 
+  filter(max(arms_per_study) > 1) %>% 
+  # select(-arms_per_study) %>% 
+  ungroup()
+
+```
+
+
 
 # extension
